debugging image white space issue 2

--- a/app/globals.css
+++ b/app/globals.css
@@ -141,6 +141,9 @@
   display: flex;
   height: auto;
   align-items: bottom;
+  letter-spacing: 0;
+  word-spacing: 0;
+  font-size: 0;
 }
 .embla__slide {
   flex: 0 0 100%;
